force-app/main/default/objects/TMS_Site__c/TMS_Site__c.object-meta.xml
<CustomObject>
    <description>Unique name of Warehouse, Distribution Site or Collection Site from TMS System. Name should be repeated for the same date range</description>
    <label>TMS Site</label>
    <nameField>
        <label>TMS Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMS Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>