force-app/main/default/objects/TMS_Site__c/fields/ARC_Region__c.field-meta.xml
<CustomField>
    <fullName>ARC_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ARC Region mapping for the TMS Site. This will be used to identify Sites Related to
Manufacturing Users</description>
    <label>ARC Region</label>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>TMS Sites</relationshipLabel>
    <relationshipName>TMS_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>