force-app/main/default/objects/TMS_Site__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Creation Date by default. Denonts the start date from which the record is effective.</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>