force-app/main/default/objects/TMS_Site__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>DATE(4000,12,31)</defaultValue>
    <description>12/31/4000 by default. Denonts the end date till which the record is effective.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>