force-app/main/default/objects/TMS_Site__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone of the TMS Site</description>
    <label>Timezone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/New_York</fullName>
                <default>true</default>
                <label>America/New_York</label>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Anchorage;</fullName>
                <isActive>false</isActive>
                <label>America/Anchorage;</label>
            </value>
            <value>
                <fullName>America/Chicago;</fullName>
                <isActive>false</isActive>
                <label>America/Chicago;</label>
            </value>
            <value>
                <fullName>America/Denver;</fullName>
                <isActive>false</isActive>
                <label>America/Denver;</label>
            </value>
            <value>
                <fullName>America/Los_Angeles;</fullName>
                <isActive>false</isActive>
                <label>America/Los_Angeles;</label>
            </value>
            <value>
                <fullName>America/New_York;</fullName>
                <isActive>false</isActive>
                <label>America/New_York;</label>
            </value>
            <value>
                <fullName>America/Phoenix;</fullName>
                <isActive>false</isActive>
                <label>America/Phoenix;</label>
            </value>
            <value>
                <fullName>America/Puerto_Rico;</fullName>
                <isActive>false</isActive>
                <label>America/Puerto_Rico;</label>
            </value>
            <value>
                <fullName>Pacific/Honolulu;</fullName>
                <isActive>false</isActive>
                <label>Pacific/Honolulu;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>