force-app/main/default/objects/TMS_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ARC_Region__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Timezone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>